# online_shopping_system

./: README.md  app.py  pyproject.toml
back-end/models/: user.py
back_end/: database.py
back_end/api/: routes.py
back_end/core/: config.py
back_end/models/: __init__.py  db_models.py  discount_code.py  item.py  order.py  public_item.py  public_user.py  sales_item.py  user.py
front-end/: package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js
front-end/src/: App.jsx  App.tsx  ExploreProducts.jsx  output.css
front-end/src/components/: AlcoholProducts.jsx  AllProducts.jsx  BBQProducts.jsx  BabyProducts.jsx  BakeryProducts.jsx  BeveragesProducts.jsx  BreakfastProducts.jsx  CartContext.jsx  CheckoutSummary  CheckoutSummary.jsx  DairyProducts.jsx  DeliProducts.jsx  ExploreProducts.jsx  FanFavoritesProducts.jsx  FrozenProducts.jsx  Header.jsx  HealthyLivingProducts.jsx  HouseholdProducts.jsx  MeatProducts.jsx  NewProducts.jsx  OnSaleProducts.jsx  PantryProducts.jsx  PersonalCareProducts.jsx  PetProducts.jsx  ProduceProducts.jsx  ProductCard.jsx  SearchBar.jsx  SearchResults.jsx  SeasonalProducts.jsx  SnacksProducts.jsx  SortOptions.jsx  Stock.jsx
front-end/src/hooks/: useSortedProducts.jsx
front-end/src/layouts/: Footer.jsx  Footer.tsx  LoginPage.jsx  NavBar.jsx  NavBar.tsx  RegisterPage.jsx  RootLayout.jsx  RootLayout.tsx
