[project]
name = "Online-Shopping-System"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kevin", email = "kevin.d.hende@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.4",
    "uvicorn[standard]>=0.30.1",
    "sqlmodel>=0.0.19",
    "mariadb>=1.1.10",
    "passlib>=1.7.4",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
fastapi-dev = "fastapi dev app.py"